[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/ShareResultWindow.tscn" type="PackedScene" id=3]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="ShareResultWindow" parent="." instance=ExtResource( 3 )]

[connection signal="restart" from="UI" to="." method="_on_UI_restart"]
[connection signal="share_result" from="UI" to="." method="_on_UI_share_result"]
[connection signal="accept" from="ShareResultWindow" to="." method="_on_ShareResultWindow_accept"]
